--- a/Ref.bib
+++ b/Ref.bib
@@ -6,3 +6,35 @@
   year={2022},
   organization={Springer}
 }
+
+@article{atkinson2006recovery,
+  title={Recovery of surface orientation from diffuse polarization},
+  author={Atkinson, Gary A and Hancock, Edwin R},
+  journal={IEEE transactions on image processing},
+  volume={15},
+  number={6},
+  pages={1653--1664},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{kupinski2019angle,
+  title={Angle of linear polarization images of outdoor scenes},
+  author={Kupinski, Meredith K and Bradley, Christine L and Diner, David J and Xu, Feng and Chipman, Russell A},
+  journal={Optical Engineering},
+  volume={58},
+  number={8},
+  pages={082419},
+  year={2019},
+  publisher={SPIE}
+}
+
+@article{umow1905chromatische,
+  title={Chromatische depolarisation durch lichtzerstreuung},
+  author={Umow, von N},
+  journal={Physikalische Zeitschrift},
+  volume={6},
+  number={20},
+  pages={674--676},
+  year={1905}
+}
